Fixing z-index

--- a/frontend/src/Components/Registration/register-login.css
+++ b/frontend/src/Components/Registration/register-login.css
@@ -15,7 +15,7 @@
 }
 
 .container {
-    z-index: 1;
+    z-index: 1000;
 }
 
   .header {
